--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -360,6 +360,7 @@ main[data-layout="note"] {
                     scroll-snap-type: y mandatory;
                     scroll-snap-align: start;
                     position: relative;
+                    justify-content: flex-start;
                 }
             }
 
